[package]
name = "flock"
description = "flag quiz"
version = "0.1.0"
authors = ["Jose Thomas <jostho@gmail.com>"]
repository = "https://github.com/jostho/flock"
license = "Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4"
clap = "2.33"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.7"
base64 = "0.12"
